--- a/TODO
+++ b/TODO
@@ -1,11 +1,12 @@
 Already implemented:
 - kdiff3's comparison algorithm (except for fineDiff)
+- implement a sub-window that shows a file's content + scrolling up and down one line at a time (press i or j)
 
 I plan to follow the following list from top to bottom for implementing new
 functionality. 
 
 - implement ncurses ui
-  - implement a sub-window that shows a file's content + scrolling up and down one line at a time
+  - horizontal scrolling within a sub-window
   - add line numbers to sub-window
   - diff view of three files. The only thing you can do is scroll up and down one line at a time.
   - add scrollbar (read-only, just to show where you are in the file)
