--- a/TODO
+++ b/TODO
@@ -10,7 +10,7 @@ functionality.
   - also support just 2 files
   - implement resizing when the terminal is resized
   - add scrollbar (read-only, just to show where you are in the file)
-  - create editable window
+  - create editable window (text only edited on screen, not backed by memory/file)
 
     supported keys:
     - arrows for navigation
@@ -30,11 +30,14 @@ functionality.
     - ctrl-shift-home/end -> select to beginning/end of file
     - shift-page up/down -> select to prev/next page
 
+  - implement memory/file storage for editable window
+    - only store edits wrt the original content
+
+- implement merging (without manual editing at first)
     diff specific keys
     - ctrl-up/down -> prev/next difference
     - ctrl-pageup/down -> prev/next conflict
     - ctrl-1/2/3 -> append/remove line from A/B/C at selected conflict position
-- implement merging (without manual editing at first)
 - implement manual editing of the merge result
   - add configuration file and settings dialog
     - kdiff3's settings: tab inserts spaces, tab size, auto indentation
