--- a/TODO
+++ b/TODO
@@ -1,49 +1,45 @@
 An incomplete list of what is still to be done:
 
 - add to documentation that xterm users should set: XTerm*metaSendsEscape: true, otherwise alt-1 a.o. won't work
-- implement ncurses ui
-    
-  - also support just 2 files
-  - add scrollbar (read-only, just to show where you are in the file)
-  - create editable window (text only edited on screen, not backed by memory/file)
+- port to libtickit and stop using ncurses/libtermkey
+- also support just 2 files
+- add scrollbar (read-only, just to show where you are in the file)
+- create editable window (text only edited on screen, not backed by memory/file)
 
-    movement keys:
-    - pageup/down
+support keys:
+- regular chars
+- delete, backspace
+- tab -> insert spaces upto tabstop
+- ctrl-c/ctrl-v -> copy/paste
+- ctrl-insert/shift-insert -> copy/paste
 
-    supported keys:
-    - regular chars
-    - delete, backspace
-    - tab -> insert spaces upto tabstop
-    - ctrl-c/ctrl-v -> copy/paste
-    - ctrl-insert/shift-insert -> copy/paste
+selection keys
+- shift-arrows -> char/line selection
+- ctrl-shift-left/right -> word selection
+- shift-home/end -> select to beginning/end of line
+- ctrl-shift-home/end -> select to beginning/end of file
+- shift-page up/down -> select to prev/next page
 
-    selection keys
-    - shift-arrows -> char/line selection
-    - ctrl-shift-left/right -> word selection
-    - shift-home/end -> select to beginning/end of line
-    - ctrl-shift-home/end -> select to beginning/end of file
-    - shift-page up/down -> select to prev/next page
+support for full-width characters:
+- move cursor 2 places with one keypress (this should make it impossible to
+  start typing/deleting while in the middle of a full-width char)
 
-    support for full-width characters:
-    - move cursor 2 places with one keypress (this should make it impossible to
-      start typing/deleting while in the middle of a full-width char)
+- implement memory/file storage for editable window
+  - only store edits wrt the original content
 
-  - implement memory/file storage for editable window
-    - only store edits wrt the original content
+- graceful degradation of colors
+  rxvt-unicode: 88, changeable
+  xterm: 8                                  ****************** problem ********************
+  xterm-256color: 256, changeable
+  linux: 8, changeable
+  screen-256color within urxvt: 256 (screen converts 256 downto 88) ***** problem *****
+  screen-256color within xterm: 256 (screen converts 256 downto 8) ****** problem ***********
+  screen-256color within xterm-256color: 256
+  screen within xterm: 8 *** problem ***
+  screen within urxvt: 8 *** problem ***
 
-  - graceful degradation of colors
-    rxvt-unicode: 88, changeable
-    xterm: 8                                  ****************** problem ********************
-    xterm-256color: 256, changeable
-    linux: 8, changeable
-    screen-256color within urxvt: 256 (screen converts 256 downto 88) ***** problem *****
-    screen-256color within xterm: 256 (screen converts 256 downto 8) ****** problem ***********
-    screen-256color within xterm-256color: 256
-    screen within xterm: 8 *** problem ***
-    screen within urxvt: 8 *** problem ***
-
-  - add configuration file and settings dialog
-    - kdiff3's settings: tab inserts spaces, tab size, auto indentation
+- add configuration file and settings dialog
+  - kdiff3's settings: tab inserts spaces, tab size, auto indentation
 
 - implement mmap for input file reading
 - implement decoding filter for non-utf8 input files
