Implemented tab key and fixed bug with cursor position after typing

--- a/TODO
+++ b/TODO
@@ -4,25 +4,18 @@ An incomplete list of what is still to be done:
 - port to libtickit and stop using ncurses/libtermkey
 - also support just 2 files
 - add scrollbar (read-only, just to show where you are in the file)
-- create editable window (text only edited on screen, not backed by memory/file)
 
 support keys:
-- regular chars
-- delete, backspace
-- tab -> insert spaces upto tabstop
+- enter
 - ctrl-c/ctrl-v -> copy/paste
 - ctrl-insert/shift-insert -> copy/paste
 
 selection keys
 - shift-arrows -> char/line selection
-- ctrl-shift-left/right -> word selection
+- ctrl-shift-left/right -> word selection (figure out what keys to assign to scrolling the input panes)
 - shift-home/end -> select to beginning/end of line
 - ctrl-shift-home/end -> select to beginning/end of file
 - shift-page up/down -> select to prev/next page
-
-support for full-width characters:
-- move cursor 2 places with one keypress (this should make it impossible to
-  start typing/deleting while in the middle of a full-width char)
 
 - implement memory/file storage for editable window
   - only store edits wrt the original content
